<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/common_activity_padding_10">


    <LinearLayout
        android:id="@+id/apply_for_merchant_layout"
        android:layout_width="220dp"
        android:layout_height="@dimen/common_list_item_height_50"
        android:layout_marginLeft="@dimen/common_activity_padding_30"
        android:layout_marginRight="@dimen/common_activity_padding_30"
        android:layout_marginTop="@dimen/common_activity_padding_30"
        android:background="@drawable/shape_applyfor_merchant_corner"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_user_mark_white"/>

        <TextView
            style="@style/TextViewWhiteText_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/title_apply_for_merchant" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/apply_for_favourite_layout"
        android:layout_width="220dp"
        android:layout_height="@dimen/common_list_item_height_50"
        android:layout_marginLeft="@dimen/common_activity_padding_30"
        android:layout_marginRight="@dimen/common_activity_padding_30"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_applyfor_favourite_corner"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_user_mark_white" />

        <TextView
            style="@style/TextViewWhiteText_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/title_apply_for_favourite" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/apply_for_superstar_layout"
        android:layout_width="220dp"
        android:layout_marginTop="20dp"
        android:layout_height="@dimen/common_list_item_height_50"
        android:layout_marginLeft="@dimen/common_activity_padding_30"
        android:layout_marginRight="@dimen/common_activity_padding_30"
        android:background="@drawable/shape_applyfor_superstar_corner"
        android:gravity="center">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_user_mark_white" />

        <TextView
            style="@style/TextViewWhiteText_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/title_apply_for_superstar" />


    </LinearLayout>


</LinearLayout>