<?xml version="1.0" encoding="utf-8"?>
<com.shangshow.showlive.common.widget.custom.ReboundScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/the_social_contract_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_list_item_height_60"
                android:background="@color/layout_item_color"
                android:paddingLeft="@dimen/common_activity_padding_10"
                android:paddingRight="@dimen/common_activity_padding_10">

                <TextView
                    style="@style/TextViewGrayText_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/the_social_contract" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrows_right" />

            </RelativeLayout>


            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_activity_padding_1"
                android:background="@color/default_stroke_color" />


            <RelativeLayout
                android:id="@+id/privacy_policy_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_list_item_height_60"
                android:background="@color/layout_item_color"
                android:paddingLeft="@dimen/common_activity_padding_10"
                android:paddingRight="@dimen/common_activity_padding_10">

                <TextView
                    style="@style/TextViewGrayText_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/privacy_policy" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrows_right" />

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_activity_padding_1"
                android:background="@color/default_stroke_color" />


            <RelativeLayout
                android:id="@+id/terms_of_service_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_list_item_height_60"
                android:background="@color/layout_item_color"
                android:paddingLeft="@dimen/common_activity_padding_10"
                android:paddingRight="@dimen/common_activity_padding_10">

                <TextView
                    style="@style/TextViewGrayText_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/terms_of_service" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrows_right" />

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_activity_padding_1"
                android:background="@color/default_stroke_color" />

            <RelativeLayout
                android:id="@+id/contact_us_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_list_item_height_60"
                android:background="@color/layout_item_color"
                android:paddingLeft="@dimen/common_activity_padding_10"
                android:paddingRight="@dimen/common_activity_padding_10">

                <TextView
                    style="@style/TextViewGrayText_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/contact_us" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrows_right" />

            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="@dimen/common_activity_padding_1"
                android:background="@color/default_stroke_color" />

            <RelativeLayout
                android:id="@+id/feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_list_item_height_60"
                android:background="@color/layout_item_color"
                android:paddingLeft="@dimen/common_activity_padding_10"
                android:paddingRight="@dimen/common_activity_padding_10">

                <TextView
                    style="@style/TextViewGrayText_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/feedback" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrows_right" />

            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
</com.shangshow.showlive.common.widget.custom.ReboundScrollView>