<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/no_data_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/common_activity_padding_10">

            <ImageView
                android:id="@+id/no_data_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <TextView
                android:id="@+id/no_data_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/gray_08"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="15dp">

            <Button
                android:id="@+id/no_data_btn"
                style="@style/TextViewSecondThemeText_16"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/loading_overlay_fail_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_color"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:padding="@dimen/common_activity_padding_10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_network_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/network_error"
                android:textColor="@color/gray_08"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <Button
                android:id="@+id/loading_overlay_fail_refresh_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:textColor="@color/t_color" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_overlay_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg_color"
        android:orientation="vertical"
        android:visibility="visible">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/loading_layout_progress_text"
            android:layout_centerInParent="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/loading_layout_progress_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@android:drawable/progress_horizontal"></ImageView>

            <ImageView
                android:id="@+id/loading_layout_progress_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/icon_launcher"></ImageView>

        </RelativeLayout>

        <TextView
            android:id="@+id/loading_layout_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/common_activity_padding_5"
            android:text="@string/loading"
            android:textColor="@color/gray_10"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

</merge>